fixed copy on FAQ page, and set the z-index of the appointment portal to 1 so it scrolls behind the navbar

--- a/app/styles/services.css
+++ b/app/styles/services.css
@@ -6,7 +6,7 @@
         position:absolute;
         right:-15px;
         top:-15px;
-        z-index:10000;
+        z-index:1;
     }
 
         .container #whiteContainer .services-tab {
